--- a/apple_juice.Rmd
+++ b/apple_juice.Rmd
@@ -1,10 +1,22 @@
 ---
-title: \vspace{-2cm} Logistic Regression Modelling to Predict Growth of Alicyclobacillus Acidoterrestris CRA7152 in Apple Juice
+title: \vspace{-2cm} Logistic Regression Modeling of Growth Probability of Alicyclobacillus Acidoterrestris CRA7152 in Apple Juice
 author: "Loftsson, Valentin Oliver — valentin.loftsson@epfl.ch"
 geometry: margin=2.5cm
 fontsize: 12pt
-output: pdf_document
+output:
+  pdf_document:
+    latex_engine: xelatex
+# always_allow_html: true
+  # html_document:
+  #   df_print: paged
+  # word_document: default
+mainfont: Calibri Light
+bibliography: bibliography.bib
 header-includes:
+- \usepackage{bm}
+- \usepackage{amsmath}
+- \usepackage[font={small, color=blue}]{caption}
+- \usepackage{subcaption}
 - \usepackage{fancyhdr}
 - \pagestyle{fancy}
 - \fancyhead[R]{Loftsson}
@@ -12,13 +24,13 @@ header-includes:
 - \titlespacing{\title}{0pt}{\parskip}{-\parskip}
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(fig.path='fig/', echo=FALSE, warning=FALSE, message=FALSE)
-library(dplyr)
-library(tidyr)
-library(caret)
+```{r setup, include=F}
+knitr::opts_chunk$set(echo=F, eval=F, warning=F, message=F)
+# library(dplyr)
+# library(tidyr)
+# library(caret)
 library(stats)
-library(knitr)
+# library(knitr)
 library(kableExtra)
 library(plotly)
 ```
@@ -41,52 +53,15 @@ apple_juice$growth <- factor(
 attach(apple_juice)
 ```
 
-# Abstract
-
-# Introduction
-short intro / background, including a clear statement of the problem of interest
-
-# Exploratory Data Analysis
-complete exploratory data analysis
-
-# Model fitting and selection
-a description of your model fitting and selection analysis
-
-# Model assessment
-a description of your model assessment and justification / results of that
-
-# Final model
-your final chosen model written in mathematical terms; inclusion of relevant plots (they should be 'pretty')
-
-# Conclusion
-any conclusions adressing the problem of interest.
-The frequency table of the `growth` response reveals that we have a semi-balanced dataset, with several more negative examples. Here, the response is categorical, so we are interested in proportions.
-
-We are interested in finding true biologically
-meaningful differences between sample types.
-
-<!-- ![](ph.png){width=48%} ![](white.png){width=4%} ![](nisin.png){width=48%}\ -->
-
-<!-- ![](temperature.png){width=48%} ![](white.png){width=4%} ![](brix.png){width=48%} -->
-
-<!-- ![](table5.png){width=50%}\ -->
-
-<!-- ![](table6.png){width=50%}\ -->
-
 ```{r}
-lrt <- function(mod1, mod2) {
-  anova(mod1, mod2, test="Chisq")
-}
-
 logreg <- function(rhs) {
   formula <- as.formula(paste("growth ~ ", rhs))
-  # formulas <- append(formulas, formula)
   glm(formula, data=apple_juice, family=binomial())
 }
 ```
 
 ```{r}
-kable.var <- function(dt, caption) {
+kable.var <- function(dt, caption, file) {
   dt %>%
     kable(caption = caption) %>%
     kable_styling(full_width = F) %>%
@@ -98,10 +73,10 @@ table.nisin <- addmargins(table(nisin, growth))
 table.temperature <- addmargins(table(temperature, growth))
 table.brix <- addmargins(table(brix, growth))
 
-# kable.var(table.ph, "Table 1: pH")
-# kable.var(table.nisin, "Table 2: Nisin concentration (IU/ml)")
-# kable.var(table.temperature, "Table 3: Temperature (°C)")
-# kable.var(table.brix, "Table 4: Soluble solids conc. (°Brix)")
+kable.var(table.ph, "Table 1: pH")
+kable.var(table.nisin, "Table 2: Nisin concentration (IU/ml)")
+kable.var(table.temperature, "Table 3: Temperature (°C)")
+kable.var(table.brix, "Table 4: Soluble solids conc. (°Brix)")
 ```
 
 ```{r}
@@ -112,23 +87,35 @@ rhs.features <- paste("(", paste(features, collapse =" + "), ")^2")
 glm.full <- logreg(rhs.features)
 
 # LRT
-# drop1(glm.full, test="LRT")
+drop1.res <- drop1(glm.full, test="LRT")
 
 # Final model
-terms.dropped <- " -ph:nisin -ph:temperature - nisin:temperature"
+terms.dropped <- " -ph:nisin -ph:temperature -nisin:temperature"
 glm.final <- logreg(paste(rhs.features, terms.dropped))
 glm.final.summary <- summary.glm(glm.final)
-# glm.final.summary
+```
+
+```{r}
+drop1.lrt <- drop1.res[4] %>% round(2)
+drop1.lrt["P value"] <- drop1.res$`Pr(>Chi)` %>% signif(4)
+drop1.lrt <- drop1.lrt[2:7,]
+caption <- "Table 5: LRT test on interaction effects"
+drop1.lrt %>%
+  kable(caption = caption, format = "html") %>%
+  kable_styling(full_width = F, bootstrap_options = "basic", font_size = 20) %>%
+  column_spec(column = 1, width = "1in") %>%
+  column_spec(column = 2:3, width = "1.5in") %>%
+  save_kable("table5.png")
 ```
 
 ```{r}
 coefs <- round(glm.final.summary$coefficients[,c(1, 4)], digits = 4)
-caption <- "Table 5: Coefficients of the final model for A. Acidoterrestris growth in apple juice"
-
-# coefs %>%
-#     kable(caption = caption, col.names = c("Coefficient", "P value"), format = "html") %>%
-#     kable_styling(full_width = F) %>%
-#     save_kable("table5-uncropped.png")
+caption <- "Table 6: Coefficients of the final model for A. Acidoterrestris growth in apple juice"
+coefs
+coefs %>%
+    kable(caption = caption, col.names = c("Coefficient", "P value"), format = "html") %>%
+    kable_styling(full_width = F, bootstrap_options = "basic", font_size = 20) %>%
+    save_kable("table6.png")
 ```
 
 ```{r}
@@ -140,14 +127,15 @@ confusion.matrix <- function(m) {
   table(model_real, model_pred)
 }
 
-caption <- "Table 6: Confusion matrix summarizing results of applying the logistic regression model on the training data samples"
+caption <- "Table 7: Confusion matrix summarizing prediction results from applying the final model on the data samples"
 cm.table <- confusion.matrix(glm.final)
-# cm.table %>%
-#   kable(caption = caption, label = caption) %>%
-#   kable_styling(full_width = F) %>%
-#   add_header_above(c("Real label" = 1, "Predicted label" = 2))
+cm.table %>%
+  kable(caption = caption, label = caption) %>%
+  kable_styling(full_width = F, bootstrap_options = "basic", font_size = 20) %>%
+  column_spec(column = 1, bold = TRUE) %>%
+  add_header_above(c("Real response" = 1, "Predicted response" = 2)) %>%
+  save_kable("table7.png")
 ```
-
 
 ```{r}
 prob.grid.temp.brix <- function(ph.const, nisin.const) {
@@ -180,17 +168,18 @@ prob.grid.nisin.brix <- function(ph.const, temp.const) {
 ```
 
 ```{r}
-plot.surface <- function(data, title, xlabel, ylabel, minx, miny) {
+plot.surface <- function(filename, data, title, xlabel, ylabel, minx, miny) {
   x <- minx:ncol(data)
   y <- miny:nrow(data)
   z <- data[y, x]
-  default.font = list(size = 10)
+  default.font = list(size = 14)
   fig <- plot_ly(x=x, y=y, z=z, type="surface", colors="YlOrRd")
   fig <- fig %>% layout(
     font = default.font,
     title = list(
       text = title,
-      font = list(size = 12)
+      font = list(size = 17),
+      y = 0.95
     ),
     scene = list(
       xaxis = list(
@@ -212,13 +201,13 @@ plot.surface <- function(data, title, xlabel, ylabel, minx, miny) {
         )
       )
     ),
-    height = 550
-    # margin = list(l = 10, r = 10, b = 10, t = 10)
+    height = 650,
+    margin = list(t = 0)
   )
+  api_create(fig, filename = filename)
   fig
 }
 ```
-
 
 ```{r}
 xlabel <- "soluble solids conc. (°Brix)"
@@ -227,8 +216,9 @@ ylabel <- "temperature (°C)"
 g <- prob.grid.temp.brix(ph.const = 3.7, nisin.const = 0)
 
 plot.surface(
+  "loftsson-apple-juice-cra7152-growth-figure-1a",
   g,
-  title = "Figure 1.a: Growth probability of CRA7152 in apple juice with nisin 0 IU/ml and pH = 3.7",
+  title = "Figure 1.a: Growth probability of CRA7152 in\napple juice with <b>nisin 0 IU/ml and pH = 3.7</b>",
   xlabel,
   ylabel,
   minx = min(brix),
@@ -240,8 +230,9 @@ plot.surface(
 g <- prob.grid.temp.brix(ph.const = 4.5, nisin.const = 0)
 
 plot.surface(
+  "loftsson-apple-juice-cra7152-growth-figure-1b",
   g,
-  title = "Figure 1.b: Growth probability of CRA7152 in apple juice with nisin 0 IU/ml and pH = 4.5",
+  title = "Figure 1.b: Growth probability of CRA7152 in\napple juice with <b>nisin 0 IU/ml and pH = 4.5</b>",
   xlabel,
   ylabel,
   minx = min(brix),
@@ -256,8 +247,9 @@ ylabel <- "nisin conc. (UI/ml)"
 g <- prob.grid.nisin.brix(ph.const = 4.0, temp.const = 45)
 
 plot.surface(
+  "loftsson-apple-juice-cra7152-growth-figure-2a",
   g,
-  title = "Figure 2.a: Growth probability of CRA7152 in apple juice with pH = 4.5 and temp. = 45°C",
+  title = "Figure 2.a: Growth probability of CRA7152 in\napple juice with <b>pH = 4.5 and temp. = 45°C</b>",
   xlabel,
   ylabel,
   minx = min(brix),
@@ -269,8 +261,9 @@ plot.surface(
 g <- prob.grid.nisin.brix(ph.const = 4.0, temp.const = 30)
 
 plot.surface(
+  "loftsson-apple-juice-cra7152-growth-figure-2b",
   g,
-  title = "Figure 2.b: Growth probability of CRA7152 in apple juice with pH = 4.5 and temp. = 30°C",
+  title = "Figure 2.b: Growth probability of CRA7152 in\napple juice with <b>pH = 4.5 and temp. = 30°C</b>",
   xlabel,
   ylabel,
   minx = min(brix),
@@ -278,3 +271,146 @@ plot.surface(
 )
 ```
 
+# Introduction
+Microbiological contamination in processed acid fruit juices has been the subject of microbiological interest and research in the past few decades. Controlling such contamination is an important factor in the preservation of packed fruit juice products. To minimize contamination risk, it is essential to consider changes in the microbiology of the produce over the entire production cycle, from cultivation and harvesting to preparation, distribution and storage.
+
+Peña *et al.* [-@pena] studied the contamination in apple juice caused by an acidophilic sporeformer bacterium, *Alicyclobacillus acidoterrestris*, and developed a model to predict its growth probability. The bacterium causes "off-flavor" in fruit juices from certain chemical compounds. Several studies have shown that *Alicyclobacillus acidoterrestris* grows at temperatures between 25 to 60°C [@previdi] with pH varying from 3.0 to 5.5 [@eguchi]. The use of nisin, a chemical that is used as a food preservative, has proven effective as a minimum inhibitory concentration method to control the germination of the bacterium's spores. However, the effectiveness of nisin depends also on the temperature, pH, and soluble solids concentration.
+
+Evaluating the bacterium's growth/nongrowth interface becomes cumbersome when multiple factors are involved. Logistic regression is a powerful tool for probabilistic microbial modeling, given that sufficient information is available about the product characteristics and conditions. It has been used frequently in similar studies. With logistic regression, it is possible to describe the growth probability and establish critical limits for the predictive variables that describe the condition of the apple juice.
+
+In this paper, we reproduce the statistical analyses performed by Peña *et al.* on the original dataset. The purpose of the original study is to "evaluate the growth responses of *Alicyclobacillus acidoterrestris* in apple juice with different pH values, concentrations of soluble solids and nisin subjected to different incubation temperatures". We begin with an exploratory data analysis and then perform logistic regression analysis to determine and assess an optimal predictive model.
+
+# Exploratory Data Analysis
+
+The dataset includes 74 samples of apple juice assays including a binary growth response (0=No Growth, 1=Growth) evaluated after 16 days of incubation. The dataset consists of two collections of 37 assays, tested in duplicate. The assays were carefully created by the researchers to ensure a balanced dataset with varied combination of factors to determine the juice condition.
+
+The effect of four factors were studied as summarized in Tables 1-4. The frequency table of the growth response reveals that we have a semi-balanced dataset, with several more negative examples and growth occuring in 26 out of 74 assays ($\sim$ 35%). Here, the response is categorical and the covariate values are discrete, so it is natural to use frequency tables. For each factor, four discrete values were selected for testing after careful experimentation and analysis, and considering accumulated knowledge from previous studies.  The tables reveal some interesting characteristics about individual factors independent of interaction effects: Growth was completely inhibited at pH 3.5 (Table 1) which is the minimum pH of the juice. It was also fully inhibited at the maximum nisin concentration 70 IU/ml (Table 2) and at the maximum soluble solids concentration of 19 °Brix (Table 4), which marks the concentration level above which no growth of *A. acidoterrestris* occurs [@splittstoesser].
+
+![](ph.png){width=50%} ![](nisin.png){width=50%}\
+
+![](temperature.png){width=50%} ![](brix.png){width=50%}
+
+
+# Model Fitting and Selection
+Logistic regression is used as a method for model fitting as it is suitable for a binary response. Here, we use the logit function as the link transformation for the generalized model:
+
+\begin{equation}
+logit(p) = log(\frac{p}{1-p}) = \beta_0 + \beta_1x_1 + \beta_2x_2 + \dots + \beta_kx_k
+\end{equation}
+
+Essentially, this means that the linear transformation outputs the logit transformed probability of a positive response ($Y=1$). To obtain the probability, $p$, we must apply the inverse logit function:
+
+\begin{equation}
+p = \frac{\exp(\beta_0 + \beta_1x_1 + \beta_2x_2 + \dots + \beta_kx_k)}{1 + \exp(\beta_0 + \beta_1x_1 + \beta_2x_2 + \dots + \beta_kx_k)}
+\end{equation}
+
+The parameters $\beta_k$ are estimated by maximum likelihood.
+
+To capture important characteristics of relationships between the explanatory variables, we start with a model that includes all main and interaction effects. Note that `^2` denotes inclusion of all interaction effects:
+
+```r
+growth ~ (ph + nisin + temperature + brix)^2
+```
+
+A likelihood-ratio test (LRT) was used to perform backward variable selection. The LRT compares two models where one is a sub-model of the other, by computing the LR test statistic, denoted here as $\lambda$:
+
+\begin{equation}
+\lambda = -2\ln{\frac{L(m_1)}{L(m_2)}} = 2(\ln{L(m_2)} - \ln{L(m_1)})
+\end{equation}
+
+where $m_1$ corresponds to the more restrictive model and $m_2$ is the less restrictive model and $L(*)$ denotes the likelihood of a model. The statistic is Chi-squared distributed.
+
+The LRT essentially tests the following hyptheses:
+H: $\beta_k = 0$ for all variables $k$ that differ between the models
+A: $\beta_k \neq 0$
+
+For each factor, we compare the full model described above with a sub-model with that factor removed. The results can be viewed in Table 5. Clearly, the terms `ph:nisin`, `ph:temperature`, and `nisin:temperature` are not significant as their P-values indicate (P > 0.05). Therefore, these terms were dropped from the model. The `drop1` method in the `stats` R package was used to perform the LRT.
+
+\
+\begin{center}
+\includegraphics{table5}
+\end{center}
+\
+
+# Final Model
+The remaining terms of the final model are all main effects and all interactions of `brix` with each variable. The coefficients and corresponding P-values are presented in Table 6. Below is the model in mathematical terms:
+
+\begin{multline}
+logit(p(Growth)) = -260.7453 \\
++ 43.0019*\pmb{pH} - 1.9031*\pmb{nisin} + 3.1852*\pmb{temp} + 13.4122*\pmb{brix} \\
+- 2.2149*\pmb{pH}*\pmb{brix} + 0.1002*\pmb{nisin}*\pmb{brix} - 0.1688*\pmb{temp}*\pmb{brix}
+\end{multline}
+
+\
+\begin{center}
+\includegraphics{table6}
+\end{center}
+\
+
+# Model Evaluation
+The model concordance or classification accuracy was used to assess the model's performance. The resulting confusion matrix is presented in Table 7. The overall accuracy is 97.3%, meaning only 2.7% or 2 samples out of 74 were incorrectly classified. The final model and accuracy results match the findings of Peña *et al.* [@pena].
+
+\
+\begin{center}
+\includegraphics{table7}
+\end{center}
+\
+
+The model was used to produce surface graphs (Figures 1-2) of the growth probability of *A. acidoterrestris* as a function of two main effects. The graphs can be explored interactively online by clicking the links above the figure captions.
+
+Figures 1.a and 1.b show the probability as a function of soluble solids concentration and temperature, given 0 IU/ml of nisin and pH 3.7 and 4.5, respectively. For pH 4.5 (Figure 1.b), growth was inhibited only in high concentrations of soluble solids (Brix). Interestingly, when pH drops down to 3.7 (Figure 1.a) no growth occurs for any value of Brix up to temperature of 30°C. Above 30°C, the probability is close to zero only above 18°Brix.
+
+Figures 2.a and 2.b show the probability as a function of soluble solids concentration and nisin concentration, given pH 4.0 and temperature 45°C and 30°C, respectively. For 45°C (Figure 2.a) growth can be inhibited by adding 40-70 IU/ml of nisin. When temperature is decreased to 30°C (Figure 2.b) we observe that the model predicts zero or small probability of growth for any Brix level and low nisin levels. At zero nisin, the probability grows smaller as Brix the level grows higher.
+
+The graphs show the effect and interactions of the variables and reveal critical values that are important to establish minimum inhibitory limits. Such limits are necessary for minimizing the use of inhibitory chemicals in the product and depend on the pH and temperature levels. Peña *et al.* [@pena] discuss critical boundaries in more detail.
+
+
+\begin{figure}
+\centering
+\begin{minipage}{.5\textwidth}
+  \centering
+  \caption*{\href{https://chart-studio.plotly.com/~valentinoli/7/}{View interactive plot online}}
+  \includegraphics[width=\linewidth]{fig1a}
+\end{minipage}%
+\begin{minipage}{.5\textwidth}
+  \centering
+  \caption*{\href{https://chart-studio.plotly.com/~valentinoli/9/}{View interactive plot online}}
+  \includegraphics[width=\linewidth]{fig1b}
+\end{minipage}
+\end{figure}
+
+\begin{figure}
+\centering
+\begin{minipage}{.5\textwidth}
+  \centering
+  \caption*{\href{https://chart-studio.plotly.com/~valentinoli/11/}{View interactive plot online}}
+  \includegraphics[width=\linewidth]{fig2a}
+\end{minipage}%
+\begin{minipage}{.5\textwidth}
+  \centering
+  \caption*{\href{https://chart-studio.plotly.com/~valentinoli/13/}{View interactive plot online}}
+  \includegraphics[width=\linewidth]{fig2b}
+\end{minipage}
+\end{figure}
+
+
+# Conclusion
+any conclusions adressing the problem of interest.
+
+systems, considering that the risk determination can be in
+terms of probability. These models could bring benefits for
+food industry, since they describe conditions that can be
+applied to process control in order to minimize the risk of
+growth of pathogenic or spoiling microorganisms. Learning
+the limits of the growth/nongrowth interface allows the study
+of the physiological mechanism toward any side of the interface.
+In view of that, the results shown in this research have
+great importance as an alternative to control apple juice deterioration
+by A. acidoterrestris
+
+along with a short discussion of any shortcomings of the final model, and your conclusions
+
+# Software
+The reproduction was performed in the `R` programming language [@r]. Tables were created with `kableExtra` [@kableExtra]. Interactive figures were created with Plotly [@plotly].
+
+# References
